Created theme context and created registering modal.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,3 +9,9 @@
 :root {
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
+
+.modal {
+    position: absolute;
+    width: 600px;
+    height: 600px;
+}
