Added UI and dummy data for posts.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,9 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
+/* * {
     @apply transition-colors duration-200;
-}
+} */
 
 :root {
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
