--- a/client/src/index.css
+++ b/client/src/index.css
@@ -55,3 +55,17 @@ textarea::-webkit-scrollbar {
 .custom-slider .MuiSlider-rail {
     background-color: rgb(0, 195, 255);
 }
+
+/* React-Easy-Crop */
+.reactEasyCrop_CropArea {
+    width: 92.5% !important;
+    background-image: none !important;
+    background-color: transparent !important;
+    border: 3px solid #00aeff !important;
+}
+
+.reactEasyCrop_Image {
+    width: 92.5%;
+    height: 80%;
+    height: fit-content;
+}
